# pytekukko-test

./: .dprint.jsonc  .editorconfig  .gitignore  .gitlint  .lefthook.yaml  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.config/: committed.toml  lefthook.yaml  mise.toml
.github/: release-please-config.json  renovate.json  requirements.txt
.github/workflows/: autofix.yaml  check.yaml  check.yml  lint-commits.yaml  release.yaml  release.yml  scorecard.yaml  test.yaml
pytekukko/: __init__.py  models.py  version.py
pytekukko/examples/: __init__.py  print_invoice_headers.py  print_next_collections.py  update_google_calendar.py
requirements/: dev-requirements.txt  test-constraints.txt  test-requirements.txt
src/pytekukko/: __init__.py  exceptions.py  models.py
src/pytekukko/examples/: __init__.py  print_collection_schedules.py  print_invoice_headers.py  print_next_collections.py  update_google_calendar.py
tests/: __init__.py  test_pytekukko.py
tests/cassettes/: test_get_collection_schedule.yaml  test_get_invoice_headers.yaml  test_login.yaml  test_login_logout.yaml  test_logout.yaml
tests/cassettes/test_pytekukko/: test_get_invoice_headers.yaml  test_login_logout.yaml  test_logout.yaml
