[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytekukko"
version = "0.13.0"
description = "Jätekukko Omakukko API client"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Ville Skyttä", email = "ville.skytta@iki.fi" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = ["aiohttp ~=3.4"]

[project.optional-dependencies]
examples = ["python-dotenv ~=0.10", "google-api-python-client ~=2.0,>=2.0.2"]

[project.scripts]
pytekukko-collection-schedules = "pytekukko.examples.print_collection_schedules:main [examples]"
pytekukko-invoice-headers = "pytekukko.examples.print_invoice_headers:main [examples]"
pytekukko-next-collections = "pytekukko.examples.print_next_collections:main [examples]"
pytekukko-update-google-calendar = "pytekukko.examples.update_google_calendar:main [examples]"

[project.urls]
Homepage = "https://github.com/scop/pytekukko"
Changelog = "https://github.com/scop/pytekukko/blob/main/CHANGELOG.md"

[tool.ruff]
select = ["ALL"]
ignore = [
  "ANN", # Maybe sometime
  "COM", # Black
  "D203", # Black, ping/pong with D211
  "D213", # Ping/pong with D212
  #"E203", # Black, uncomment when/if ruff starts to support
  "E50", # Black
  "E70", # Black
  "TCH003", # Maybe sometime

]
fix = true
unfixable = ["T20"]
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
python_version = "3.9"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
enable_error_code = "ignore-without-code"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["error"]
