[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytekukko"
version = "0.14.0"
description = "Jätekukko Omakukko API client"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ville Skyttä", email = "ville.skytta@iki.fi" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = ["aiohttp~=3.4"]

[project.optional-dependencies]
examples = ["python-dotenv>=0.10,<2", "google-api-python-client~=2.0,>=2.0.2"]

[project.scripts]
pytekukko-collection-schedules = "pytekukko.examples.print_collection_schedules:main [examples]"
pytekukko-invoice-headers = "pytekukko.examples.print_invoice_headers:main [examples]"
pytekukko-next-collections = "pytekukko.examples.print_next_collections:main [examples]"
pytekukko-update-google-calendar = "pytekukko.examples.update_google_calendar:main [examples]"

[project.urls]
Homepage = "https://github.com/scop/pytekukko"
Changelog = "https://github.com/scop/pytekukko/blob/main/CHANGELOG.md"

[tool.ruff]
select = [
  "ALL",
  # E and W rules not covered by Black
  "E71",
  "E72",
  "E73",
  "E74",
  "E9",
  "W605",
]
ignore = [
  "ANN", # Maybe sometime
  "COM", # Black
  "D203", # Black, ping/pong with D211
  "D213", # Ping/pong with D212
  "E", # Black, except ones in `select` above
  "TCH003", # Maybe sometime
  "W", # Black, except ones in `select` above

]
fix = true
unfixable = ["T20"]
src = ["src", "tests"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
enable_error_code = "ignore-without-code,redundant-self,truthy-iterable"
strict = true
warn_unreachable = true
exclude = "^build/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  # https://github.com/pytest-dev/pytest/issues/10977
  "default:(ast\\.(NameConstant|Str)|Attribute s) is deprecated:DeprecationWarning:_pytest.assertion.rewrite",
]
