[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytekukko"
version = "0.16.0"
description = "Jätekukko Omakukko API client"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ville Skyttä", email = "ville.skytta@iki.fi" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = ["aiohttp~=3.4"]

[project.optional-dependencies]
examples = ["python-dotenv>=0.10,<2", "google-api-python-client~=2.0,>=2.0.2", "icalendar~=5.0"]

[project.scripts]
pytekukko-collection-schedules = "pytekukko.examples.print_collection_schedules:main [examples]"
pytekukko-invoice-headers = "pytekukko.examples.print_invoice_headers:main [examples]"
pytekukko-next-collections = "pytekukko.examples.print_next_collections:main [examples]"
pytekukko-update-google-calendar = "pytekukko.examples.update_google_calendar:main [examples]"

[project.urls]
Homepage = "https://github.com/scop/pytekukko"
Changelog = "https://github.com/scop/pytekukko/blob/main/CHANGELOG.md"

[tool.ruff]
fix = true
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", # Maybe sometime
  "D203", # Ping/pong with D211
  "D213", # Ping/pong with D212
  "TC003", # Maybe sometime
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  # (keep order of ignores here same as ^there for maintainability)
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
unfixable = ["T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
enable_error_code = "ignore-without-code,redundant-self,truthy-iterable"
strict = true
warn_unreachable = true
exclude = "^build/"

[[tool.mypy.overrides]]
module = "icalendar.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
