[metadata]
name = pytekukko
description = Jätekukko Omakukko API client
long_description = file:README.md
long_description_content_type = text/markdown
author = Ville Skyttä
author_email = ville.skytta@iki.fi
url = https://github.com/scop/pytekukko
license = Apache License 2.0
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
project_urls =
    Changelog = https://github.com/scop/pytekukko/blob/main/CHANGELOG.md

[options]
python_requires = >=3.8
install_requires =
    aiohttp ~=3.4
package_dir =
    = src
packages = find:
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    pytekukko-invoice-headers = pytekukko.examples.print_invoice_headers:main [examples]
    pytekukko-next-collections = pytekukko.examples.print_next_collections:main [examples]
    pytekukko-update-google-calendar = pytekukko.examples.update_google_calendar:main [examples]

[options.extras_require]
examples =
    python-dotenv ~=0.10
    google-api-python-client >=2.0.2,==2.*
    backports.zoneinfo ~=0.2; python_version <"3.9"

[flake8]
# D202,E203,E501 conflict with/handled by black
extend-ignore = D202,E203,E501,S101

[isort]
profile = black

[mypy]
python_version = 3.8
mypy_path = $MYPY_CONFIG_FILE_DIR/src
show_error_codes = True
strict = True
warn_unreachable = True

[pylint.MASTER]
jobs = 2
load-plugins = pylint_strict_informational
persistent = no
py-version = 3.8
[pylint.MESSAGES CONTROL]
disable =
    duplicate-code,  # examples, https://github.com/PyCQA/pylint/issues/214
    fixme,
    format,  # handled by black
    missing-class-docstring,  # handled by pydocstyle
    missing-function-docstring,  # handled by pydocstyle
    missing-module-docstring,  # handled by pydocstyle
    wrong-import-order,  # handled by isort
enable =
    use-symbolic-message-instead,
    useless-suppression,
[pylint.REPORTS]
score = no

[tox:tox]
envlist = py38, py39, py310, pypy3, pyston3
skip_missing_interpreters = true
[testenv]
deps = -rrequirements-test.txt
extras = examples
commands =
    {envpython} -X dev -bb -m pytest {posargs}
    pytekukko-invoice-headers --help
    pytekukko-next-collections --help
    pytekukko-update-google-calendar --help
[testenv:pyston3]
basepython = pyston3
[gh-actions]  # tox-gh-actions
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    pypy-3.8: pypy3
