[metadata]
name = pytekukko
description = Jätekukko Omakukko API client
long_description = file:README.md
long_description_content_type = text/markdown
author = Ville Skyttä
author_email = ville.skytta@iki.fi
url = https://github.com/scop/pytekukko
license = Apache License 2.0
license_files = LICENSE
classifier =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
project_urls =
    Changelog = https://github.com/scop/pytekukko/blob/main/CHANGELOG.md

[options]
python_requires = >=3.9
install_requires =
    aiohttp ~=3.4
package_dir =
    = src
packages = find:
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    pytekukko-collection-schedules = pytekukko.examples.print_collection_schedules:main [examples]
    pytekukko-invoice-headers = pytekukko.examples.print_invoice_headers:main [examples]
    pytekukko-next-collections = pytekukko.examples.print_next_collections:main [examples]
    pytekukko-update-google-calendar = pytekukko.examples.update_google_calendar:main [examples]
[options.extras_require]
examples =
    python-dotenv ~=0.10
    google-api-python-client ~=2.0,>=2.0.2
[options.package_data]
pytekukko =
    py.typed

[flake8]  # Not in pyproject.toml: https://github.com/PyCQA/flake8/issues/234
# D202,E203,E501 conflict with/handled by black
extend-ignore = D202,E203,E501,S101
noqa-require-code = True
